k8s-manifests/eva-release/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eva-release-dev
  labels:
    environment: development
