k8s-manifests/eva-release/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eva-release
spec:
  rules:
  - host: wwwint.ebi.ac.uk
    http:
      paths:
      - path: /eva/webservices/release
        pathType: Prefix
        backend:
          service:
            name: eva-release
            port:
              number: 8080
